Added HTMl Basic

--- a/HTML/firstWebsite/firstWeb.html
+++ b/HTML/firstWebsite/firstWeb.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First Web</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -20,8 +21,102 @@
         সেমিনারের প্রধান অতিথি ও পরিবেশ অধিদপ্তরের মহাপরিচালক আব্দুল হামিদ সুপারিশগুলো পর্যালোচনা করে সিদ্ধান্ত গ্রহণের আশ্বাস দেন। তিনি বলেন, অনলাইন নিবন্ধন কার্যক্রমের মাধ্যমে দ্বীপে কতজন পর্যটক যেতে পারবেন, তা সরকার নির্ধারণ করে দেবে।
     </p>
 
-    <a href="https://www.prothomalo.com/bangladesh/6c4mwp2h8b" target="_blank">Go to here more info</a
+    <a href="https://www.prothomalo.com/bangladesh/6c4mwp2h8b " target="_blank ">Go to here more info</a
     >
     <button>Click Here</button>
+
+    <img
+      width="300px "
+      height="300px "
+      src="https://cdn.pixabay.com/photo/2023/05/24/17/49/ai-generated-8015425_640.jpg "
+      alt="Here is a Image "
+    />
+    <br />
+
+    <br />
+    <table border="4 " width="50% " align="center ">
+      <tr>
+        <th>Company</th>
+        <th>Contact</th>
+        <th>Country</th>
+      </tr>
+
+      <tr>
+        <td>LangkaBangla</td>
+        <td>DataPath</td>
+        <td>Depictzo</td>
+      </tr>
+      <tr>
+        <td>Vivo</td>
+        <td>Oppo</td>
+        <td>Samsung</td>
+      </tr>
+    </table>
+
+    <br />
+
+    <ol>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Javascript</li>
+    </ol>
+    <ul>
+      <li>Football</li>
+      <li>Cricket</li>
+      <li>Badminton</li>
+    </ul>
+
+    <from>
+      <div>
+        <label for="Username ">Username</label>
+        <input placeholder="your user name " type="text " />
+      </div>
+      <br />
+      <div>
+        <label for="Password ">Password</label>
+        <input type="password " />
+      </div>
+      <br />
+      <div>
+        <label for="email ">Your email</label>
+        <input type="email " />
+      </div>
+      <br />
+      <div>
+        <label for="biodata ">Your bio</label>
+        <textarea cols="50 " rows="10 "></textarea>
+      </div>
+      <br />
+
+      <div>
+        <label for="gender ">Gender</label>
+        <select>
+          <option value="male ">Male</option>
+          <option value="female ">Female</option>
+        </select>
+      </div>
+      <br />
+      <div>
+        <label for="color ">Favorate Color</label>
+        <input name="color " type="radio " value="red " />
+        <label for="red ">Red</label>
+        <input name="color " type="radio " value="green " />
+        <label for="green ">Green</label>
+      </div>
+      <br />
+      <div>
+        <label for="hobbies ">Select Hobbies</label>
+        <input name="hobbies " value="reading " type="checkbox " />
+        <label name="hobbies " for="reading ">Reading</label>
+        <input name="hobbies " value="reading " type="checkbox " />
+        <label name="hobbies " for="singing ">Singing</label>
+      </div>
+
+      <input type="submit " value="register " />
+      <h1></h1>
+      <h2></h2>
+      <h3></h3>
+      <div></div>
+    </from>
   </body>
 </html>
